[project]
name = "config-checker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "amirshabanics", email = "amirshabanics@gmail.com" }
]
dependencies = [
    "requests[socks]>=2.32.3",
    "docker>=7.1.0",
    "python-dotenv>=1.0.1",
    "prometheus-client>=0.21.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.30.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/config_checker"]
